general styling and update to template

--- a/less/plugins/plugin-blog.less
+++ b/less/plugins/plugin-blog.less
@@ -16,7 +16,8 @@
 	display: table;
 }
 
-.blogpostlist__title-link, .blogpost__post-title {	
+.blogpostlist__title-link, 
+.blogpost__post-title {	
     &:after {
         border-top: 1px solid @color-swatch7;
         content: "";
@@ -29,7 +30,8 @@
     }
 }
 
-.blogpostlist__post-image, .blogpostlist__post-content {
+.blogpostlist__post-image, 
+.blogpostlist__post-content {
 	text-align: center;
     margin: 0px auto;
     display: table;
@@ -55,7 +57,8 @@
 	text-align: center;
 }
 
-.blogpost__post-attributes a, .blogpostlist__post-excerpt a {
+.blogpost__post-attributes a, 
+.blogpostlist__post-excerpt a {
 	color: lighten(@font-swatch5-color,20%);
 }
 
