general styling to theme

--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -221,6 +221,7 @@
 
 .ecomproductslist__legend {
     padding: 10px 30px 10px;
+    border-bottom: 1px solid @color-swatch7;
 }
 
 .ecomproductslist__form-body {
