--- a/less/plugins/plugin-menu.less
+++ b/less/plugins/plugin-menu.less
@@ -36,7 +36,7 @@
 }
 
 .menu__section-header {
-    margin: 20px 0;
+    margin: 30px 0 20px;
 }
 
 .menu__section-title, 
@@ -86,7 +86,7 @@
 .menu-section--featured, 
 .menu-item--featured {
     .menu__item-article {
-        border: 1px solid @color-swatch3;
+        border: 1px solid @color-swatch1;
         padding: 20px;
     }
 }
