--- a/less/navigation.less
+++ b/less/navigation.less
@@ -51,7 +51,7 @@
 
 .navigation-item.folder .navigation__item-name {
 	&:hover {
-		color:lighten(@font-swatch4-color,20%);
+		color: @font-swatch4-color;
 	}
 }
 
@@ -85,16 +85,14 @@
 }
 
 .navigation-list--children, .default-page .navigation-list--children {
-	background-color:@color-swatch3;
+	background-color:@color-swatch1;
+	border: 1px solid @color-swatch7;
 	.navigation__item-name {
 		color:@font-swatch9-color;
 	}
 	@media @tablet {
-		border-top: none;
-		background-color: @color-swatch1;
 		position: relative;
 		top: 0;
-		background-color: @color-swatch3;
 		.navigation-item:hover & {
 			display: none;
 		}
