--- a/less/mixins.less
+++ b/less/mixins.less
@@ -52,11 +52,13 @@
 // Button Transitions
 // -----------------------------
 
-button:hover, .button:hover, .social-icons__social-item:hover {
+button:hover, .button:hover, .socialicons__social-item a:hover {
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -ms-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
     color:@font-swatch7-color;
+    border: 1px solid @color-swatch3;
+    background-color: @color-swatch3;
 }
