--- a/less/widgets.less
+++ b/less/widgets.less
@@ -359,16 +359,9 @@
 // ----------------------
 
 // Hide Caption
-.gallery__caption {
-    display: none;
+.gallery__image-link {
     margin: 0;
     padding: 5px 10px 20px 15px;
-    background-color:transparent;
-    -webkit-transition: all 1s ease;
-    -moz-transition:    all 1s ease;
-    -ms-transition:     all 1s ease;
-    -o-transition:      all 1s ease;
-    transition:         all 1s ease;
     &:hover {
     background-color:fade(@color-swatch3,90%);
         &:after {
@@ -381,6 +374,13 @@
             box-shadow: inset 0 0 1px 1px @color-swatch1;
             top: 0;
             left: 0;
+            background-color: rgba(255, 255, 255, 0.5);
+            -webkit-transition: all 1s ease;
+            -moz-transition:    all 1s ease;
+            -ms-transition:     all 1s ease;
+            -o-transition:      all 1s ease;
+            transition:         all 1s ease;
+            height: 280px;
         }
     }
 }
@@ -398,8 +398,21 @@
     flex-direction: column;
 }
 
+.gallery__caption {
+    border: 1px solid @color-swatch7;
+    padding: 10px;
+    margin: 0;
+    .image-title, 
+    .image-description {
+        color: @font-swatch4-color;
+    }
+}
 
-
+.gallery__caption-link {
+    &:hover {
+        text-decoration: none;
+    }
+}
 
 // -----------------------------
 // 7.  #Slideshow
@@ -409,14 +422,16 @@
 // ----------------
 
 // Slideshow Height
-.responsiveslideshow, .responsiveslideshow__figure {
+.responsiveslideshow, 
+.responsiveslideshow__figure {
     position: relative;
     min-height: 400px;
 }
 
-.responsiveslideshow__slideshow-controls, .responsiveslideshow__caption {
-    text-align:center;
-    margin-top:15px;
+.responsiveslideshow__slideshow-controls, 
+.responsiveslideshow__caption {
+    text-align: center;
+    margin-top: 15px;
 }
 
 
@@ -443,7 +458,7 @@
     width: 100%;
     padding: 20px;
     @media @mobile {
-        display:none;
+        display: none;
     }
 }
 
@@ -476,7 +491,7 @@
 }
 
 .pause-toggle {
-    display:none;
+    display: none;
 }
 
 .control-text {
@@ -614,13 +629,6 @@ input.input[type=email],input.input[type=search], .contact-form__textarea {
     margin-bottom:10px;
 }
 
-.socialicons__social-item {
-    &:hover {
-        background-color:@color-swatch4;
-        color:@font-swatch9-color;
-    }
-}
-
 .socialicons__social-item a:hover {
     color:@font-swatch9-color;
     text-decoration: none;
@@ -630,7 +638,7 @@ input.input[type=email],input.input[type=search], .contact-form__textarea {
     padding: 17px 20px;
     border: 1px solid @color-swatch4;
     padding: 10px;
-    display:inline-block;
+    display: inline-block;
 }
 
 
@@ -642,7 +650,7 @@ input.input[type=email],input.input[type=search], .contact-form__textarea {
 // -----------------------------
 
 // Body
-.twitter {
+.widget__twitter {
     background-color: @color-swatch1;
     border: 1px solid @color-swatch7;
     padding: 30px 30px 5px;
@@ -664,9 +672,8 @@ input.input[type=email],input.input[type=search], .contact-form__textarea {
     display: inline-block;
     margin-right: 20px;
     @media @mobile {
-        display: block;
-        margin-right: 0;
-        margin-bottom: 20px;
+        margin: 0px auto 20px;
+        display:table;
     }
 }
 
@@ -716,9 +723,13 @@ input.input[type=email],input.input[type=search], .contact-form__textarea {
     .twitter {
         background-color: transparent;
         border: 0;
+        padding: 10px 30px 0px;
     }
     .map__embed-wrap {
         min-width: 400px;
+        @media @mobile {
+            min-width: 280px;
+        }
     }
     .twitter__avatar {
         margin: 0px auto 10px;
@@ -731,9 +742,19 @@ input.input[type=email],input.input[type=search], .contact-form__textarea {
     .signupform__label {
         padding: 0;
         color: @font-swatch4-color;
+        font-size: @font-swatch3-font-size;
         &:after {
             margin: 10px auto 10px;
         }
+    }
+    .profile__signupform {
+        min-width: 400px;
+        @media @mobile {
+            min-width: 280px;
+        }
+    }
+    .socialicons__social-item a:hover {
+        border: 0;
     }
 }
 
