--- a/less/plugins/plugin-blog.less
+++ b/less/plugins/plugin-blog.less
@@ -53,6 +53,12 @@
 }
 
 // Blog Post
+
+.blogpost__image-link {
+    margin: 0px auto;
+    display: table;
+}
+
 .blogpost__post-content {
 	text-align: center;
 }
