--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -25,6 +25,12 @@
 
 .ecomproduct__legend {
     padding: 36px 30px 20px;
+    width: initial;
+}
+
+.ecomproduct__fieldset {
+    border: 1px solid @color-swatch7;
+    padding: 20px;
 }
 
 .product-content {
@@ -40,10 +46,6 @@
     form {
         padding: 0;
         width: 100%;
-        height: 189px;
-        @media @mobile {
-            height: 209px;
-        }
     }
 }
 
@@ -76,7 +78,7 @@
 
 .ecomproduct__category-link,
 .ecomproduct__tag-link {
-    color: @color-swatch2;
+    color: lighten(@color-swatch3,20%);
 }
 
 .ecomproduct__select-wrap,
@@ -84,27 +86,20 @@
     display: inline-block;
 }
 
+.ecomproduct__form-body,
+.ecomproduct__legend {
+    margin: 0;
+    padding: 0;
+}
+
 // Basket Buttons
-.ecomproduct__view-basket-wrap {
-    margin-top: -49px;
-    text-align: center;
-}
-
 .js-ecom-product-add-to-cart-btn {
-    float: right;
-    width: 52%;
-    padding: 8px 12px;
-    background-color: @color-swatch4;
-    border: 4px solid darken(@color-swatch4,5%);
-    &:hover {
-        background-color: @color-swatch2;
-    }
+    background-color: @color-swatch3;
+    color: @font-swatch7-color;
+    margin: 20px 0;
 }
 
-.ecom-product-go-to-checkout-btn {
-    padding: 12px 12px;
-    width: 48%;
-}
+
 // -----------------------------
 // 2. #Product List
 // -----------------------------
@@ -126,6 +121,11 @@
         width: 100%;
         margin-bottom: 4%;
     }
+}
+
+.ecomproductslist__product-content {
+    border: 1px solid @color-swatch7;
+    padding: 10px 0px;
 }
 
 .product-item-details {
