--- a/less/widgets.less
+++ b/less/widgets.less
@@ -364,6 +364,11 @@
     padding: 5px 10px 20px 15px;
     &:hover {
     background-color:fade(@color-swatch3,90%);
+                -webkit-transition: all 1s ease;
+            -moz-transition:    all 1s ease;
+            -ms-transition:     all 1s ease;
+            -o-transition:      all 1s ease;
+            transition:         all 1s ease;
         &:after {
             position: absolute;
             content: "";
@@ -371,10 +376,9 @@
             height: 100%;
             border: 10px solid transparent;
             box-sizing: border-box;
-            box-shadow: inset 0 0 1px 1px @color-swatch1;
             top: 0;
             left: 0;
-            background-color: rgba(255, 255, 255, 0.5);
+            background-color: fade(@color-swatch3, 50%);
             -webkit-transition: all 1s ease;
             -moz-transition:    all 1s ease;
             -ms-transition:     all 1s ease;
@@ -405,6 +409,7 @@
     .image-title, 
     .image-description {
         color: @font-swatch4-color;
+        text-shadow: none;
     }
 }
 
