final changese and styling

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -140,6 +140,7 @@
 		-webkit-tap-highlight-color: rgba(0,0,0,0);
 		&:hover {
 			background-color: transparent;
+			border: 0;
 		}
 		// Toggle Button Closed State
 		.bar {
