--- a/less/widgets.less
+++ b/less/widgets.less
@@ -362,29 +362,27 @@
 .gallery__image-link {
     margin: 0;
     padding: 5px 10px 20px 15px;
+    display: block;
+    &:after {
+        -webkit-transition: all 1s ease;
+        -moz-transition:    all 1s ease;
+        -ms-transition:     all 1s ease;
+        -o-transition:      all 1s ease;
+        transition:         all 1s ease;
+        background-color:fade(@color-swatch3,0%);
+        position: absolute;
+        content: "";
+        width: 100%;
+        height: 100%;
+        border: 10px solid transparent;
+        box-sizing: border-box;
+        top: 0;
+        left: 0;
+        height: 280px;
+    }
     &:hover {
-    background-color:fade(@color-swatch3,90%);
-                -webkit-transition: all 1s ease;
-            -moz-transition:    all 1s ease;
-            -ms-transition:     all 1s ease;
-            -o-transition:      all 1s ease;
-            transition:         all 1s ease;
         &:after {
-            position: absolute;
-            content: "";
-            width: 100%;
-            height: 100%;
-            border: 10px solid transparent;
-            box-sizing: border-box;
-            top: 0;
-            left: 0;
-            background-color: fade(@color-swatch3, 50%);
-            -webkit-transition: all 1s ease;
-            -moz-transition:    all 1s ease;
-            -ms-transition:     all 1s ease;
-            -o-transition:      all 1s ease;
-            transition:         all 1s ease;
-            height: 280px;
+            background-color: fade(@color-swatch3, 30%);
         }
     }
 }
@@ -410,6 +408,10 @@
     .image-description {
         color: @font-swatch4-color;
         text-shadow: none;
+    }
+    .image-title {
+        font-size: @font-swatch4-font-size;
+        line-height: @font-swatch4-line-height;
     }
 }
 
@@ -574,10 +576,11 @@ button, .button {
 //  8.5  #PAYPAL
 //  --------------
 
-.widget__paypal-button form {
+.widget__paypalbuynow form {
     border: 0;
-    padding:0;
-    margin:0;
+    @media @tablet {
+        text-align: left;
+    }
 }
 
 
@@ -588,14 +591,26 @@ button, .button {
 // -----------------------------
 
 // Body
-.contact-form__form-body {
-    margin:0px 30px;
+.contactform__form-body {
+    margin: 10px 30px 30px;
+}
+
+.contactform__fieldset {
+    margin: 0px auto;
+    display: table;
+    width: 60%;
+    text-align: center;
 }
 
 // Inputs
-input.input[type=email],input.input[type=search], .contact-form__textarea {
+input.input[type=email],
+input.input[type=search], 
+.contact-form__textarea {
     border:0;
     border-bottom:1px solid @color-swatch7;
+    @media @mobile {
+        margin-bottom: 10px;
+    }
     &:focus {
         border-color:@color-swatch4;
     }
@@ -621,6 +636,16 @@ input.input[type=email],input.input[type=search], .contact-form__textarea {
     padding:0;
 }
 
+.signupform__form-body {
+    margin: 0px auto 10px;
+    display: table;
+    width: 60%;
+    text-align: center;
+}
+
+.signupform__input {
+    float: initial;
+}
 
 // -----------------------------
 // 11.  #Social Icons
@@ -741,7 +766,7 @@ input.input[type=email],input.input[type=search], .contact-form__textarea {
         display: table;
     }
     .signupform__input {
-        width: 100%!important;
+        width: 100%;
         text-align: center;
     }
     .signupform__label {
@@ -760,6 +785,11 @@ input.input[type=email],input.input[type=search], .contact-form__textarea {
     }
     .socialicons__social-item a:hover {
         border: 0;
+    }
+    input.input[type=email], 
+    input.input[type=search], 
+    .contact-form__textarea {
+        color: @font-swatch5-color;
     }
 }
 
