signup form margin and padding styled

--- a/less/plugins/plugin-blog.less
+++ b/less/plugins/plugin-blog.less
@@ -2,6 +2,18 @@
 // BaseKit Baseplate: CSS > Plugin: Blog
 // -------------------------------------
 
+// Blog Search
+.blogsearch__fieldset {
+    margin: 0px auto 10px;
+    display: table;
+    width: 70%;
+    text-align: center;
+}
+
+.blogsearch__form-body {
+    margin: 10px 0px 20px;
+}
+
 // Blog Post List
 .blogpostlist__post-header {
     margin-top: 25px;
