--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -104,7 +104,7 @@
     color: @font-swatch7-color;
     margin: 20px 0;
 }
-ecomproduct__product-content
+
 
 // -----------------------------
 // 2. #Product List
@@ -193,6 +193,7 @@ ecomproduct__product-content
 // 4. #Basket Summary
 // -------------------------------
 
+// Basket Summary Content
 .basket-summary__summary-title {
     margin-bottom:20px;
 }
@@ -214,6 +215,13 @@ ecomproduct__product-content
     background-color: @color-swatch1;
     border: 1px solid @color-swatch7;
 }
+
+.ecombasketsummary__summary-form {
+    border: 0;
+}
+
+
+
 
 // -------------------------------
 // 5. #Basket Filters
@@ -250,7 +258,12 @@ ecomproduct__product-content
     margin: 30px 30px 20px;
 }
 
+// Search Button
 .ecomproductslist__input {
+    padding: 3px 30px;
+}
+
+.ecomproductslist__button {
     padding: 3px 30px;
 }
 
