--- a/less/theme.less
+++ b/less/theme.less
@@ -117,7 +117,7 @@ form, .form {
 
 // Form Body
 .form-body {
-	margin: 10px 30px 20px;
+	margin: 10px 0 20px;
 	@media @mobile {
 		margin: 20px;
 	}
