--- a/less/widgets.less
+++ b/less/widgets.less
@@ -592,13 +592,13 @@ button, .button {
 
 // Body
 .contactform__form-body {
-    margin: 10px 30px 30px;
+    margin: 10px 0 30px;
 }
 
 .contactform__fieldset {
     margin: 0px auto;
     display: table;
-    width: 60%;
+    width: 70%;
     text-align: center;
 }
 
@@ -639,7 +639,7 @@ input.input[type=search],
 .signupform__form-body {
     margin: 0px auto 10px;
     display: table;
-    width: 60%;
+    width: 70%;
     text-align: center;
 }
 
@@ -776,6 +776,9 @@ input.input[type=search],
         &:after {
             margin: 10px auto 10px;
         }
+    }
+    .signupform__form-body {
+        margin: 20px auto 0px;
     }
     .profile__signupform {
         min-width: 400px;
