--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -134,12 +134,18 @@
 
 .ecomproductslist__product-content {
     border: 1px solid @color-swatch7;
-    padding: 10px 0px;
+    padding: 10px;
 }
 
 .product-item-details {
     text-align: center;
     margin-top: 0;
+}
+
+// Featured Products
+.ecomfeaturedproducts__product-content {
+    border: 1px solid @color-swatch7;
+    padding: 10px;
 }
 
 // -----------------------------
