fixes #2, fixes #3, fixes #4, fixes #5

--- a/less/plugins/plugin-blog.less
+++ b/less/plugins/plugin-blog.less
@@ -1,5 +1,5 @@
 // -------------------------------------
-// BaseKit Baseplate: CSS > Plugin: Blog
+// Trivia: CSS > Plugin: Blog
 // -------------------------------------
 
 // Blog Search
