--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,5 +1,5 @@
 // -----------------------------
-// Beta Studio: CSS > Mixins
+// Trivia: CSS > Mixins
 // -----------------------------
 
 
@@ -52,7 +52,9 @@
 // Button Transitions
 // -----------------------------
 
-button:hover, .button:hover, .socialicons__social-item a:hover {
+button:hover, 
+.button:hover, 
+.socialicons__social-item a:hover {
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -ms-transition: all 0.5s ease;
