--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,5 +1,5 @@
 // -----------------------------
-// Beta Studio: CSS > Navigation
+// Trivia: CSS > Navigation
 // -----------------------------
 
 // Navigation Bar
