--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -1,5 +1,5 @@
 // ------------------------------------------
-// BaseKit Baseplate: CSS > Plugin: Ecommerce
+// Trivia: CSS > Plugin: Ecommerce
 // ------------------------------------------
 
 // -----------------------------
