--- a/less/plugins/plugin-menu.less
+++ b/less/plugins/plugin-menu.less
@@ -1,5 +1,5 @@
 // -------------------------------------
-// BaseKit Baseplate: CSS > Plugin: Menu
+// Trivia: CSS > Plugin: Menu
 // -------------------------------------
 
 // Menu Navigation
