--- a/less/theme.less
+++ b/less/theme.less
@@ -1,5 +1,5 @@
 // ---------------------------------
-// Beta Studio: CSS > Template Theme
+// Trivia: CSS > Template Theme
 // ---------------------------------
 
 // 1. #HEADER & FOOTER
