--- a/less/widgets.less
+++ b/less/widgets.less
@@ -1,5 +1,5 @@
 // --------------------------------
-// BaseKit Baseplate: CSS > Widgets
+// Trivia: CSS > Widgets
 // --------------------------------
 
 
