--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1,5 +1,5 @@
 // --------------------------------
-// BaseKit Baseplate Template (v1.0)
+// BaseKit Baseplate Theme (v1.0)
 // --------------------------------
 
 // -----------------------------
