--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -105,6 +105,10 @@
     margin: 20px 0;
 }
 
+.ecom-product-go-to-checkout-btn {
+    padding: 8px 37px 8px 36px;
+}
+
 
 // -----------------------------
 // 2. #Product List
