--- a/less/plugins/plugin-blog.less
+++ b/less/plugins/plugin-blog.less
@@ -88,6 +88,12 @@
     margin: 0;
 }
 
+.blogpost__post-body hr {
+    border: 0;
+    height: 1px;
+    background-color: @color-swatch7;
+}
+
 // Blog Post List Footer
 .blogpost__post-footer {
 	border: 1px solid @color-swatch7;
