--- a/less/widgets.less
+++ b/less/widgets.less
@@ -827,6 +827,9 @@ input.input[type=search],
     }
     .profile__signupform {
         min-width: 400px;
+        @media @tablet {
+            margin: 10px 0;
+        }
         @media @mobile {
             min-width: 280px;
         }
