general styling to ecommerce, blog and menu

--- a/less/plugins/plugin-menu.less
+++ b/less/plugins/plugin-menu.less
@@ -29,6 +29,14 @@
     display: none;
 }
 
+.menusections-item {
+    @media @mobile {
+        display: block;
+        margin-right: 0;
+        border-bottom: 1px dotted @color-swatch7;
+        padding: 10px 0px;
+    }
+}
 
 // Menu Content
 .widget__menu {
