--- a/less/widgets.less
+++ b/less/widgets.less
@@ -280,7 +280,7 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    height: 150px;
+    min-height: 150px;
     display: flex;
     display: -webkit-box;
     display: -moz-box;
