--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -58,6 +58,10 @@
     }
 }
 
+.product-item-details {
+    margin: 20px 0px;
+}
+
 .ecomproduct__image-link {
     background: no-repeat;
 }
@@ -146,10 +150,45 @@
     margin-top: 0;
 }
 
+.product-list {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-direction: normal;
+    -moz-box-direction: normal;
+    -webkit-box-orient: horizontal;
+    -moz-box-orient: horizontal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-pack: justify;
+    -moz-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-align-content: space-between;
+    -ms-flex-line-pack: justify;
+    align-content: space-between;
+    -webkit-box-align: start;
+    -moz-box-align: start;
+    -webkit-align-items: flex-start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+}
+
 // Featured Products
 .ecomfeaturedproducts__product-content {
     border: 1px solid @color-swatch7;
     padding: 10px;
+}
+
+.listing-pagination .pagination-item.current a {
+    background-color: @color-swatch2;
 }
 
 // -----------------------------
