--- a/less/widgets.less
+++ b/less/widgets.less
@@ -375,12 +375,12 @@
 // Use Background-image Method
 .gallery__image-link {
     display: block;
-    height: 280px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     margin: 0;
     padding: 5px 10px 20px 15px;
+    padding-bottom: 100%;
     &:after {
         -webkit-transition: all 1s ease;
         -moz-transition:    all 1s ease;
@@ -448,7 +448,13 @@
     }
 }
 
+.responsivecolumns .gallery__caption-link {
+    display: none;
+}
 
+.responsivecolumns .widget__gallery .gallery-item:hover figcaption {
+    background-color: transparent;
+}
 
 
 // -----------------------------
