--- a/stylesheet.less
+++ b/stylesheet.less
@@ -123,6 +123,7 @@
     -webkit-flex: 1 1 auto;
     -ms-flex: 1 1 auto;
     flex: 1 1 auto;
+    width: 100%;
 }
 
 // -----------------------------
