image gallery styled and different transition added

--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -188,7 +188,8 @@
 }
 
 .listing-pagination .pagination-item.current a {
-    background-color: @color-swatch2;
+    background-color: @color-swatch3;
+    color: @font-swatch9-color;
 }
 
 // -----------------------------
