--- a/less/theme.less
+++ b/less/theme.less
@@ -83,7 +83,7 @@
 // Standard Text Link
 // ------------------
 
-a { color: @link-color; }
+a { color: @color-swatch2; }
 
 
 // Blockquote
@@ -192,7 +192,7 @@ textarea,
         content: "";
         display: block;
         position: relative;
-        margin: 30px auto 15px;
+        margin: 20px auto 15px;
         min-width: 60px;
         max-width: 200px;
         width: 5%;
