peer review fixes

--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -259,6 +259,9 @@
 
 .summary-table .cell {
     padding: 25px 12px;
+    @media @mobile {
+        padding: 8px 12px;
+    }
 }
 
 .button--quantity {
@@ -314,6 +317,11 @@
 }
 
 .ecomproductslist__button {
+    padding: 3px 30px;
+}
+
+// Clear Search Button
+.ecomproductslist__button--clear {
     padding: 3px 30px;
 }
 
