--- a/less/plugins/plugin-menu.less
+++ b/less/plugins/plugin-menu.less
@@ -114,7 +114,7 @@
     .menu__section-title:after, 
     .menu__item-title:after, 
     .menu__item-subtitle:after {
-        border-top: 1px solid @color-swatch3;
+        border-top: 1px solid @color-swatch7;
     }
 } 
 
@@ -132,4 +132,5 @@
 .menu__section-footer {
     border: 1px solid @color-swatch7;
     padding: 10px 10px 0px;
+    margin-bottom: 10px;
 }
