--- a/less/plugins/plugin-blog.less
+++ b/less/plugins/plugin-blog.less
@@ -88,7 +88,7 @@
     margin: 0;
 }
 
-.blogpostlist__post-excerpt--full hr {
+hr {
     border: 0;
     height: 1px;
     background-color: @color-swatch7;
