--- a/less/widgets.less
+++ b/less/widgets.less
@@ -229,6 +229,8 @@
 .feature__content-wrap {
     text-align:center;
     max-width: 80%;
+    margin: 0px auto;
+    display: table;
     @media @tablet {
         max-width:100%;
     }
