product filters styled

--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -304,11 +304,9 @@
 }
 
 .ecomproductslist__legend {
-    padding: 10px 30px 10px;
+    padding: 10px 0 10px;
     border-bottom: 1px solid @color-swatch7;
-    @media @tablet {
-         border-top: 1px solid @color-swatch7;
-    }
+    border-top: 1px solid @color-swatch7;
 }
 
 .ecomproductslist__fieldset--search .ecomproductslist__legend {
@@ -317,8 +315,8 @@
     }
 }
 
-.ecomproductslist__form-body {
-    margin: 30px 30px 20px;
+.ecomproductslist__form {
+    border: 0;
 }
 
 // Search Button
