--- a/less/widgets.less
+++ b/less/widgets.less
@@ -199,7 +199,7 @@
 // Feature Background (Image)
 // --------------------------
 
-.homepage-feature .feature__background-image {
+.feature__background-image {
     background-repeat: no-repeat;
     background-position: center center;
     -webkit-background-size: cover;
@@ -207,13 +207,34 @@
     -o-background-size: cover;
     background-size: cover;
     min-height: 500px;
-    display: flex;
     display: -webkit-box;
     display: -moz-box;
     display: -ms-flexbox;
     display: -webkit-flex;
-    align-items: center;
+    display: flex;
+    -webkit-box-direction: normal;
+    -moz-box-direction: normal;
+    -webkit-box-orient: vertical;
+    -moz-box-orient: vertical;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-box-pack: center;
+    -moz-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-align-content: center;
+    -ms-flex-line-pack: center;
+    align-content: center;
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     @media @tablet {
         min-height: 400px;
     }
@@ -276,20 +297,7 @@
 // --------------------------
 
 .default-feature .feature__background-image {
-    background-repeat: no-repeat;
-    background-position: center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
     min-height: 150px;
-    display: flex;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    align-items: center;
-    justify-content: center;
     @media @tablet {
         min-height: 400px;
     }
