--- a/less/widgets.less
+++ b/less/widgets.less
@@ -207,34 +207,10 @@
     -o-background-size: cover;
     background-size: cover;
     min-height: 500px;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-direction: normal;
-    -moz-box-direction: normal;
-    -webkit-box-orient: vertical;
-    -moz-box-orient: vertical;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-flex-wrap: nowrap;
-    -ms-flex-wrap: nowrap;
-    flex-wrap: nowrap;
-    -webkit-box-pack: center;
-    -moz-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-align-content: center;
-    -ms-flex-line-pack: center;
-    align-content: center;
-    -webkit-box-align: center;
-    -moz-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
+    display: table;
+    min-height: 500px;
+    height: 600px;
+    width: 100%;
     @media @tablet {
         min-height: 400px;
     }
@@ -250,8 +226,8 @@
 .feature__content-wrap {
     text-align:center;
     max-width: 80%;
-    margin: 0px auto;
-    display: table;
+    vertical-align: middle;
+    display: table-cell;
     @media @tablet {
         max-width:100%;
     }
