--- a/less/theme.less
+++ b/less/theme.less
@@ -172,6 +172,7 @@ textarea,
 .input--single-line {
     border: 0;
     border-bottom: 1px solid @color-swatch7;
+    webkit-appearance: none;
     &:focus {
         border: 0;
         box-shadow: none;
@@ -186,7 +187,10 @@ textarea,
     text-align: center;
     font-size: @font-swatch1-font-size;
     font-weight: @font-swatch1-font-weight;
-    padding: 30px 0px 0px;
+    padding: 30px 0 0;
+    @media @tablet {
+        padding: 30px 0 20px;
+    }
     &:after {
         border-top: 1px solid @color-swatch7;
         content: "";
@@ -196,6 +200,9 @@ textarea,
         min-width: 60px;
         max-width: 200px;
         width: 5%;
+        @media @tablet {
+            display: none;
+        }
     }
 }
 
