blog images width fixes for windows mobile

--- a/less/plugins/plugin-blog.less
+++ b/less/plugins/plugin-blog.less
@@ -46,7 +46,6 @@
 .blogpostlist__post-content {
 	text-align: center;
     margin: 0px auto;
-    display: table;
 }
 
 .post-article {
@@ -54,6 +53,14 @@
 	@media @mobile {
 		padding:0;
 	}
+}
+
+.blogpostlist__image {
+    display: inline-block;
+}
+
+.blogpostlist__image-link {
+    text-align: center;
 }
 
 // Blog Post List Footer
