--- a/less/plugins/plugin-blog.less
+++ b/less/plugins/plugin-blog.less
@@ -73,11 +73,6 @@
 
 // Blog Post
 
-.blogpost__image-link {
-    margin: 0px auto;
-    display: table;
-}
-
 .blogpost__post-content {
 	text-align: center;
 }
@@ -99,6 +94,10 @@ hr {
     border: 0;
     height: 1px;
     background-color: @color-swatch7;
+}
+
+.blogpost__image {
+    margin: 0px auto;
 }
 
 // Blog Post List Footer
