fix padding for Firefox

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -42,18 +42,19 @@
 
 // ** Styles for advanced Baseplate template - remove when developing a custom template
 
-// Page Container 
+// Page Container
 // --------------
 
 .container {
 	max-width: 1200px;
 	margin: 0 auto;
-	padding: 1% 5%;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 13px;
+    padding-bottom: 13px;
 	@media @tablet {
-		padding: 3% 3%;
-	}
-	@media @mobile {
-		padding: 2% 3%;
+		padding-left: 3%;
+        padding-right: 3%;
 	}
 }
 
